test/qp/bad/classic5.qp
-- Fail : typing error in a function call.
let m + n = add(m,n) ;;
let bad = 0 + true ;;

